@@ -51,7 +51,7 @@ if (PHP_ONPHP != "no") {
 		
 		"Castable.c DBBinary.c DBField.c DBValue.c DialectString.c FieldTable.c \
 		DropTableQuery.c SelectField.c SQLTableName.c Query.c QueryIdentification.c \
-		ExtractPart.c FullText.c FromTable.c"
+		ExtractPart.c FullText.c FromTable.c GroupBy.c"
 		
 		"onphp"
 	);
